<resources>
    <string name="app_name">Flashcard Alarm</string>
    <string name="add_alarm">add a new alarm</string>
    <string name="return_to_main_page">return to main page</string>
    <string name="default_time">07:00 AM</string>
    <string name="sunday">S</string>
    <string name="friday">F</string>
    <string name="thursday">T</string>
    <string name="wednesday">W</string>
    <string name="tuesday">T</string>
    <string name="monday">M</string>
    <string name="one_time">One time</string>
    <string name="add_new_lesson">Add New Lesson</string>
    <string name="save_alarm">Save Alarm</string>
    <string name="no_lessons_found">No lesson found</string>
    <string name="lessons_title">Lessons</string>
    <string name="save_lesson">Save Lesson</string>
    <string name="edit_preferences">Edit Settings</string>
    <string name="import_csv">Import CSV file</string>
    <string name="manual_add">Manually Add Flashcard</string>
    <string name="add_flashcards">Add Flashcards</string>
    <string name="settings">Settings</string>
    <string name="care_about_capitalisation">Care about Capitalisation?</string>
    <string name="care_about_punctuation">Care about Punctuation?</string>
    <string name="language_mapping">Pick which fields are which languages</string>
    <string name="english_headers">Mother Tongue</string>
    <string name="german_headers">Foreign</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="type_lesson_name">Insert name of lesson</string>
    <string name="lesson_title">Lesson Title</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="action_back">Go back to previous page</string>
    <string name="select_ringtone">Select Ringtone</string>
    <string name="copy_from_google_sheet">Copy from Google Sheet</string>
    <string name="paste_text_hint">Paste text from Google Sheet/Excel</string>
    <string name="paste">Paste</string>
    <string name="clear">Clear</string>
    <string name="choose_lesson">Lesson</string>
    <string name="pick_qns_num">Pick number of questions</string>
    <string name="proceed_to_learn">Proceed to learn</string>
    <string name="snooze">Snooze</string>
    <string name="practice_lesson">Practice lesson</string>
    <string name="go_to_lessons">Go to lessons</string>
    <string name="next">Next</string>
    <string name="check_answer">Check Answer</string>
    <string name="next_flashcard">Next Flashcard</string>
    <string name="input_number_of_questions">Number of questions</string>
    <string name="choose_number_of_snoozes">Number of Snoozes</string>
    <string name="pick_snooze_duration">Snooze Duration</string>
    <string name="_0">0</string>
    <string name="_5">5</string>
    <string name="edit_flashcard">edit flashcard</string>
    <string name="day_of_theme">day of theme</string>
    <string name="skip">Skip Next Alarm</string>
    <string name="select_wallpaper">Select Wallpaper</string>
    <string name="practice_foreign_language">Practice Foreign Language</string>
    <string name="repeat_wrong_answers">Repeat Wrong Answers</string>
    <string name="_10">10</string>
    <string name="alarm_volume">Alarm Volume</string>
    <string name="skip_question">Skip Question</string>
</resources>