<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.NewLessonActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text=""
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addFlashcardButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_flashcards"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:icon="@drawable/baseline_library_add_24"
            app:iconGravity="start"
            app:iconPadding="8dp"
            app:iconTint="?attr/colorPrimary"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="1dp" />

        <LinearLayout
            android:id="@+id/optionsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            android:visibility="gone">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/manuallyAddButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manual_add"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:icon="@drawable/baseline_library_add_24"
                app:iconGravity="start"
                app:iconPadding="8dp"
                app:iconTint="?attr/colorPrimary"
                app:strokeColor="?attr/colorPrimary"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/csvImportButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/import_csv"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:icon="@drawable/baseline_library_add_24"
                app:iconGravity="start"
                app:iconPadding="8dp"
                app:iconTint="?attr/colorPrimary"
                app:strokeColor="?attr/colorPrimary"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/copyButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copy_from_google_sheet"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:icon="@drawable/baseline_library_add_24"
                app:iconGravity="start"
                app:iconPadding="8dp"
                app:iconTint="?attr/colorPrimary"
                app:strokeColor="?attr/colorPrimary"
                app:strokeWidth="1dp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/preferencesButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/edit_preferences"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:icon="@drawable/twotone_app_settings_alt_24"
            app:iconGravity="start"
            app:iconPadding="8dp"
            app:iconTint="?attr/colorPrimary"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="1dp" />

        <include
            android:id="@+id/searchBar"
            layout="@layout/searchbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:placeholderText="" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/flashcard_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="8dp"
            android:paddingBottom="80dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:spanCount="1"
            tools:listitem="@layout/flashcard_item" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveLessonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="12dp"
        android:text="@string/save_lesson"
        android:textColor="@android:color/white"
        app:backgroundTint="?attr/colorPrimary"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_save"
        app:iconGravity="textStart"
        app:iconTint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/practiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="62dp"
        android:contentDescription="@string/practice_lesson"
        android:src="@drawable/ic_add_lesson"
        app:backgroundTint="@color/colorPrimary"
        app:layout_anchor="@id/saveLessonButton"
        app:layout_anchorGravity="top|start"
        app:maxImageSize="32dp"
        app:tint="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>