<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:endIconMode="custom"
        app:endIconTint="@color/colorPrimary"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numOfQns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_number_of_questions"
            android:inputType="numberSigned"
            android:minLines="1"
            android:padding="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:rowCount="2"
        android:useDefaultMargins="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"
            app:icon="@drawable/ic_cancel"
            app:iconGravity="textStart"
            app:strokeColor="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:layout_marginTop="8dp"
            android:text="@string/next"
            app:backgroundTint="@color/colorPrimary"
            app:icon="@drawable/ic_next"
            app:iconGravity="textStart" />
    </GridLayout>
</LinearLayout>